public/css/style.css
/*At all resolutions */

	/*Tags */
	body{
		background-color: black;
	}
	h1, h2, p{
		color: white;
		font-family: 'Roboto', sans-serif;
	}
	td{
		cursor: pointer;
		margin: 1%;
	}
	ul{
		list-style: none
	}
	li{
		cursor: pointer;
	}
	/*Classes*/
	.fullPage{
		height: 100vh;
	}
	.row{
		margin: 0px;
	}
	.verticalCenterLanding{
		display: flex;
		flex-direction: column;
		justify-content: center;
  		align-items: center;
	}
	.verticalCenterInformation{
		display: flex;
		align-items: center;
	}
	.project{
		padding: 5%;
		width: 33.33%;
	}

	/*IDs*/
	#landing{
		background-image: url("../images/bg-min.jpg");
		background-size: cover;
	}
	#information{
		background-color: #4BBFC3;
	}
	#projects{
		background-color: #4BAC94;
		padding: 5%;
		min-height: 100%;
	}
	#projectTable{
		table-layout: fixed;
		width:100%;
	}
	#projectList{
		background-color: #158468;
		border-bottom-style: solid;
		border-bottom-color: #4BAC94;
		border-bottom-width: 1px;
	}
	#projectListItem{
		background-color: #158468;
		border-bottom-style: solid;
		border-bottom-color: #4BAC94;
		border-bottom-width: 1px;
	}
	#projectListBorder{
		background-color: #158468;
	}
	#project1{
		background-color: #158468;
		border-right-style: solid;
		border-right-color: #4BAC94;
		border-right-width: 1px;
		border-bottom-style: solid;
		border-bottom-color: #4BAC94;
		border-bottom-width: 1px;
	}
	#project1:hover{
		background-color: #53ACC9;
	}
	#project2{
		background-color: #158468;
		border-right-style: solid;
		border-right-color: #4BAC94;
		border-right-width: 1px;
		border-bottom-style: solid;
		border-bottom-color: #4BAC94;
		border-bottom-width: 1px;
	}
	#project2:hover{
		background-color: #53ACC9;
	}
	#project3{
		background-color: #158468;
		border-bottom-style: solid;
		border-bottom-color: #4BAC94;
		border-bottom-width: 1px;
	}
	#project3:hover{
		background-color: #53ACC9;
	}
	#project4{
		background-color: #158468;
		border-right-style: solid;
		border-right-color: #4BAC94;
		border-right-width: 1px;
	}
	#project4:hover{
		background-color: #53ACC9;
	}
	#project5{
		background-color: #158468;
		border-right-style: solid;
		border-right-color: #4BAC94;
		border-right-width: 1px;
	}
	#project5:hover{
		background-color: #53ACC9;
	}
	#project6{
		background-color: #158468;
	}
	#project6:hover{
		background-color: #53ACC9;
	}
	#profilePic{
		margin: 0 auto;
	}
	#aboutText{
		margin: 0 auto;
	}

/*Desktop*/
@media screen and (min-width:768px){
	/*Tags */
	h1{
		font-size: 120px;
		margin-top: 0px;
	}
	/*Classes*/

	/*IDs*/
	#about{
		font-size: 24px;
	}
	
}
/*Phones and Tablets*/
/* Tablet Width */
@media screen and (max-width: 768px){
	/*Tags */
	h1{
		font-size: 60px;
	}
	/*Classes */

	/*IDs*/
	#profPic{
		display: none;
	}
}

@media screen and (max-height: 734px){
	h1{
		font-size: 40px; 
	}
	h2{
		font-size: 20px;
	}
	p{
		font-size: 16px;
	}
}

